k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-api
  namespace: secure-bank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transaction-api
  template:
    metadata:
      labels:
        app: transaction-api
    spec:
      serviceAccountName: transaction-api-sa
      automountServiceAccountToken: false
      containers:
        - name: transaction-api
          image: secure-transaction-api:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: tmp
          emptyDir: {}
