k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-api-service
  namespace: secure-bank
  labels:
    app: transaction-api
spec:
  selector:
    app: transaction-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
